--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -22,15 +22,21 @@ jobs:
           
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
-      - name: Installing model
-        run: |
-          cd whisper/examples/whisper.android
-          mkdir -p app/src/main/assets/models
-          cd app/src/main/assets/models
-          curl -L --output ggml-tiny.en.bin https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-tiny.en.bin
+      # - name: Installing model
+      #   run: |
+      #     cd whisper/examples/whisper.android
+      #     mkdir -p app/src/main/assets/models
+      #     cd app/src/main/assets/models
+      #     curl -L --output ggml-tiny.en.bin https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-tiny.en.bin
 
       - name: Build
         run: |
+          cd whisper/examples/whisper.android
+          ./gradlew assembleRelease --no-daemon
+
+      - name: Build with external ggml
+        run: |
+          export PATH_TO_GGML=$PWD/ggml
           cd whisper/examples/whisper.android
           ./gradlew assembleRelease --no-daemon
           
