--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -22,13 +22,20 @@ jobs:
           
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
-      # - name: Installing model
-      #   run: |
-      #     cd whisper/examples/whisper.android
-      #     mkdir -p app/src/main/assets/models
-      #     cd app/src/main/assets/models
-      #     curl -L --output ggml-tiny.en.bin https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-tiny.en.bin
+      - name: Installing model
+        run: |
+          cd whisper/examples/whisper.android
+          mkdir -p app/src/main/assets/models
+          cd app/src/main/assets/models
+          curl -L --output ggml-tiny.en.bin https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-tiny.en.bin
 
+      - name: Getting a sample
+        run: |
+          cd whisper/examples/whisper.android
+          mkdir -p app/src/main/assets/samples
+          cd app/src/main/assets/samples
+          curl -O -L https://github.com/ggerganov/whisper.cpp/raw/master/samples/jfk.wav
+          
       - name: Build
         run: |
           cd whisper/examples/whisper.android
