--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Build
         run: |
           cd examples/whisper.android.java
+          chmod +x gradlew
           ./gradlew assembleRelease --no-daemon
           
       - name: Upload to artifactory
