--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -18,6 +18,10 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
           cache: "gradle"
+      - name: Install Sdk
+        uses: android-actions/setup-android@v3
+        with:
+          cmdline-tools-version: 9.0
         
       - name: Installing model
         run: |
